# Open-Source-GA4GH-Stack

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  LICENSE  Makefile  README.de.md  README.md  install.sh  stack.yml.example
.github/: dependabot.yml
.github/workflows/: ci.yml  compose-smoke.yml  dependabot-smoke.yml  helixtest-phase1.yml  helixtest-phase2-wes.yml  helm-validate.yml  publish-pypi.yml
cli/: README.md  pyproject.toml
cli/src/community_stack/: __init__.py  compare_cmd.py  compose_merge.py  config.py  demo_cmd.py  generate.py  helm_gen.py  init_wizard.py  main.py  paths.py  profile_env.py  status_cmd.py  systemd_gen.py
cli/tests/: test_compose_merge.py  test_config_roundtrip.py  test_paths.py
config/beacon/: conf.py.template
config/beacon/mongo/: conf.env.template
config/caddy/: Caddyfile.template
config/drs/: drs.config.yml.template
config/funnel/: funnel.conf.template
config/oauth2-proxy/: oauth2-proxy.cfg.template
config/profiles/: beacon-only.env  beacon-wes.env  drs-wes.env  full-stack.env
config/sapporo/: executable_workflows.json.template
data/demo/: cohorts.json  datasets.json  genomicVariations.json  individuals.json
deploy/docker-compose/: docker-compose.base.yml  docker-compose.beacon.yml  docker-compose.drs.yml  docker-compose.keycloak.yml  docker-compose.tes.yml  docker-compose.wes.yml
deploy/helm/: Chart.yaml  README.md  values.yaml
deploy/helm/charts/beacon/: Chart.yaml  values.yaml
deploy/helm/charts/caddy/: Chart.yaml  values.yaml
deploy/helm/charts/drs/: Chart.yaml  values.yaml
deploy/helm/charts/drs/templates/: pvc.yaml  (+3 more)
deploy/helm/charts/funnel/: Chart.yaml  values.yaml
deploy/helm/charts/oauth2-proxy/: Chart.yaml  values.yaml
deploy/helm/charts/sapporo/: Chart.yaml  values.yaml
deploy/helm/templates/: NOTES.txt
deploy/slurm/: funnel.service  sapporo.service
docs/: COMPONENTS.md  DATA-INGEST.md  ELIXIR-AAI.md  HELIXTEST.md  KEYCLOAK.md  LIMITATIONS.md  RELEASING.md  SLURM-SETUP.md
(+18 files in other folders)
