[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ga4gh-community-stack"
version = "0.1.0"
description = "GA4GH Community Stack — curated OSS deployment kit and lab-stack CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Synaptic Four", email = "hello@synapticfour.dev" }]
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml~=6.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "httpx>=0.27",
    "questionary~=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11", "types-PyYAML"]

[project.urls]
Homepage = "https://synapticfour.dev"

[project.scripts]
lab-stack = "community_stack.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/community_stack"]

[tool.hatch.build.targets.wheel.force-include]
"../config" = "community_stack/_bundled/config"
"../deploy/docker-compose" = "community_stack/_bundled/deploy/docker-compose"
"../deploy/slurm" = "community_stack/_bundled/deploy/slurm"
"../data/demo" = "community_stack/_bundled/data/demo"
"../COMPARISON.md" = "community_stack/_bundled/COMPARISON.md"

[tool.hatch.build.targets.sdist]
include = ["src/community_stack"]

[tool.hatch.build.targets.sdist.force-include]
"../config" = "community_stack/_bundled/config"
"../deploy/docker-compose" = "community_stack/_bundled/deploy/docker-compose"
"../deploy/slurm" = "community_stack/_bundled/deploy/slurm"
"../data/demo" = "community_stack/_bundled/data/demo"
"../COMPARISON.md" = "community_stack/_bundled/COMPARISON.md"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = ["questionary"]
ignore_missing_imports = true
